# unified-cythonizing

./: README.md  build_ext.py  pyproject.toml  test.py
foo/: __init__.py  foo.py
foo_c_ext/: bar_c.pyx  foo_c.pyx
some_mod_pkg/: pyproject.toml
some_mod_pkg/some_mod/: __init__.py
